--- a/src/libraries/icubmod/embObjLib/CMakeLists.txt
+++ b/src/libraries/icubmod/embObjLib/CMakeLists.txt
@@ -18,7 +18,7 @@ endif(ETHRES_DEBUG_DONTREADBACK)
 
 add_definitions(-D_ICUB_CALLBACK_ -DUSE_EOPROT_XML -DEOPROT_CFG_OVERRIDE_CALLBACKS_IN_RUNTIME)
 
-add_definitions(${CXX11_FLAGS})
+#add_definitions(${CXX11_FLAGS})
 
 if(ICUB_COMPILE_EMBOBJ_LIBRARY)
 
@@ -188,6 +188,8 @@ set(EXTRA_SOURCE            ${EXTRA_FOLDER}/hostTransceiver.cpp
 
 set(DEBUG_SOURCE            ${DEBUG_FOLDER}/eODeb_eoProtoParser.c
                             ${DEBUG_FOLDER}/eOtheEthLowLevelParser.c)
+
+set_source_files_properties(${EXTRA_SOURCE} PROPERTIES COMPILE_FLAGS ${CXX11_FLAGS})
 
 
 set(embobj_source
