added strainCalibrationDataAcquisition in tools. it is the old https://svn.icub.iit.local/repos/mecha/ftSensCalib/acquisitionV3 sligthly modified to make it run again.

--- a/src/tools/CMakeLists.txt
+++ b/src/tools/CMakeLists.txt
@@ -16,7 +16,7 @@ add_subdirectory(embObjProtoTools/boardTransceiver)
 #canLoader needs GtkPlus, but it contains a library needed by other modules
 add_subdirectory(canLoader)
 add_subdirectory(ethLoader)
-
+add_subdirectory(strainCalibrationDataAcquisition)
 
 # Tools available both for Qt5 and GTK2
 if(ICUB_USE_Qt5)
