added a strainCalib project with a GUI still in GTK but now which is QT ready as it uses canLoaderLib and strainCalibLib

--- a/src/tools/CMakeLists.txt
+++ b/src/tools/CMakeLists.txt
@@ -17,6 +17,7 @@ add_subdirectory(embObjProtoTools/boardTransceiver)
 add_subdirectory(canLoader)
 add_subdirectory(ethLoader)
 add_subdirectory(strainCalibrationDataAcquisition)
+add_subdirectory(strainCalib)
 
 # Tools available both for Qt5 and GTK2
 if(ICUB_USE_Qt5)
