Added embObjIMU: first draft

--- a/src/libraries/icubmod/CMakeLists.txt
+++ b/src/libraries/icubmod/CMakeLists.txt
@@ -55,6 +55,7 @@ yarp_begin_plugin_library(icubmod)
   add_subdirectory(embObjMais)
   add_subdirectory(embObjMultiEnc)
   add_subdirectory(embObjInertials)
+  add_subdirectory(embObjIMU)
   add_subdirectory(embObjVirtualAnalogSensor)
   add_subdirectory(usbCamera)
   add_subdirectory(imuST_M1)
