embObjIMU: updated wrapper type

--- a/src/libraries/icubmod/embObjIMU/embObjIMU.ini
+++ b/src/libraries/icubmod/embObjIMU/embObjIMU.ini
@@ -1,5 +1,5 @@
-[plugin fakeIMU]
+[plugin embObjIMU]
 type device
-name fakeIMU
-library yarp_fakeIMU
+name embObjIMU
+library embObjIMU
 wrapper inertial
