--- a/src/libraries/icubmod/embObjIMU/CMakeLists.txt
+++ b/src/libraries/icubmod/embObjIMU/CMakeLists.txt
@@ -5,7 +5,7 @@
 yarp_prepare_plugin(embObjIMU    CATEGORY device
                                  TYPE yarp::dev::embObjIMU
                                  INCLUDE embObjIMU.h
-                                 EXTRA_CONFIG WRAPPER=AnalogServer)
+                                 EXTRA_CONFIG WRAPPER=inertial)
                                  #EXTRA_CONFIG WRAPPER=AnalogServer o serverInertial???)
 
 #IF (NOT SKIP_embObjIMU)
