--- a/src/libraries/icubmod/CMakeLists.txt
+++ b/src/libraries/icubmod/CMakeLists.txt
@@ -52,6 +52,7 @@ yarp_begin_plugin_library(icubmod)
   add_subdirectory(embObjSkin)
   add_subdirectory(embObjAnalog)
   add_subdirectory(embObjStrain)
+  add_subdirectory(embObjFTsensor)
   add_subdirectory(embObjMais)
   add_subdirectory(embObjMultiEnc)
   add_subdirectory(embObjInertials)
