--- a/src/libraries/icubmod/embObjIMU/CMakeLists.txt
+++ b/src/libraries/icubmod/embObjIMU/CMakeLists.txt
@@ -5,8 +5,7 @@
 yarp_prepare_plugin(embObjIMU    CATEGORY device
                                  TYPE yarp::dev::embObjIMU
                                  INCLUDE embObjIMU.h
-                                 EXTRA_CONFIG WRAPPER=inertial)
-                                 #EXTRA_CONFIG WRAPPER=AnalogServer o serverInertial???)
+                                 EXTRA_CONFIG WRAPPER=multipleanalogsensorsserver)
 
 IF (NOT SKIP_embObjIMU)
 
@@ -17,7 +16,7 @@ IF (NOT SKIP_embObjIMU)
 #   message(INFO " embObjIMU - embObj_includes: ${embObj_includes}, ${CMAKE_CURRENT_SOURCE_DIR}/")
   INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR} ${YARP_INCLUDE_DIRS} ${iCubDev_INCLUDE_DIRS} )
 
-  yarp_add_plugin(embObjIMU embObjIMU.cpp embObjIMU.h)
+  yarp_add_plugin(embObjIMU embObjIMU.cpp embObjIMU.h imuMeasureConverter.cpp imuMeasureConverter.h)
   TARGET_LINK_LIBRARIES(embObjIMU ethResources ${YARP_LIBRARIES} ${ACE_LIBRARIES})
   icub_export_plugin(embObjIMU)
 
