--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -25,13 +25,13 @@ project(iCub)
 find_package(YARP 2.3.73.4 REQUIRED)
 message(STATUS "YARP is version: ${YARP_VERSION}")
 
-if (YARP_HAS_MATH_LIB)
-     set(ICUB_HAS_YARP TRUE CACHE BOOL "" FORCE)
-     message(STATUS "found libYARP_math")
-else(YARP_HAS_MATH_LIB)
-     set(ICUB_HAS_YARP FALSE CACHE BOOL "" FORCE)
-     message(FATAL_ERROR "YARP was found, but no libYARP_math was detected, please recompile yarp")
-endif(YARP_HAS_MATH_LIB)
+if(YARP_math_FOUND)
+  set(ICUB_HAS_YARP TRUE CACHE BOOL "" FORCE)
+  message(STATUS "found libYARP_math")
+else()
+  set(ICUB_HAS_YARP FALSE CACHE BOOL "" FORCE)
+  message(FATAL_ERROR "YARP was found, but no libYARP_math was detected, please recompile yarp")
+endif()
 
 set_property(GLOBAL PROPERTY ICUB_INCLUDE_DIRS)
 set_property(GLOBAL PROPERTY ICUB_TARGETS)
