--- a/src/libraries/learningMachine/CMakeLists.txt
+++ b/src/libraries/learningMachine/CMakeLists.txt
@@ -2,12 +2,12 @@
 # Authors: Arjan Gijsberts
 # CopyPolicy: Released under the terms of the GNU GPL v2.0.
 
-SET(PROJECTNAME learningMachine)
-PROJECT(${PROJECTNAME})
+set(PROJECTNAME learningMachine)
+project(${PROJECTNAME})
 
-SET(LM_LIB ${PROJECTNAME})
+set(LM_LIB ${PROJECTNAME})
 
-SET(LM_HEADER
+set(LM_HEADER
     include/iCub/learningMachine/DatasetRecorder.h
     include/iCub/learningMachine/DummyLearner.h
     include/iCub/learningMachine/FactoryT.h
@@ -35,7 +35,7 @@ SET(LM_HEADER
     include/iCub/learningMachine/TransformerCatalogue.h
     include/iCub/learningMachine/TransformerPortable.h )
 
-SET(LM_MACHINE_SRC
+set(LM_MACHINE_SRC
     src/DatasetRecorder.cpp
     src/DummyLearner.cpp
     src/IFixedSizeLearner.cpp
@@ -44,7 +44,7 @@ SET(LM_MACHINE_SRC
     src/Prediction.cpp
     src/RLSLearner.cpp )
 
-SET(LM_TRANSFORMER_SRC
+set(LM_TRANSFORMER_SRC
     src/FixedRangeScaler.cpp
     src/IFixedSizeTransformer.cpp
     src/IScaler.cpp
@@ -55,23 +55,23 @@ SET(LM_TRANSFORMER_SRC
     src/SparseSpectrumFeature.cpp
     src/Standardizer.cpp )
 
-SET(LM_SUPPORT_SRC
+set(LM_SUPPORT_SRC
     src/Math.cpp 
     src/Serialization.cpp )
 
 # declare groups of source and header files -- makes things pretty in MSVC.
-SOURCE_GROUP("Source Files" FILES ${LM_MACHINE_SRC} ${LM_TRANSFORMER_SRC} ${LM_SUPPORT_SRC})
-SOURCE_GROUP("Header Files" FILES ${LM_HEADER})
+source_group("Source Files" FILES ${LM_MACHINE_SRC} ${LM_TRANSFORMER_SRC} ${LM_SUPPORT_SRC})
+source_group("Header Files" FILES ${LM_HEADER})
 
 # add YARP include directories
-INCLUDE_DIRECTORIES(${GSL_INCLUDE_DIRS})
+include_directories(${GSL_INCLUDE_DIRS})
 
 # add our include files into our compiler's search path.
-INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/include)
+include_directories(${PROJECT_SOURCE_DIR}/include)
 
-ADD_LIBRARY(${LM_LIB} ${LM_MACHINE_SRC} ${LM_TRANSFORMER_SRC} ${LM_SUPPORT_SRC} ${LM_HEADER})
+add_library(${LM_LIB} ${LM_MACHINE_SRC} ${LM_TRANSFORMER_SRC} ${LM_SUPPORT_SRC} ${LM_HEADER})
 
-TARGET_LINK_LIBRARIES(${LM_LIB} ${GSL_LIBRARIES} ${YARP_LIBRARIES} YARP_gsl)
+target_link_libraries(${LM_LIB} ${GSL_LIBRARIES} ${YARP_LIBRARIES} YARP::YARP_gsl)
 
 icub_export_library(${LM_LIB} INTERNAL_INCLUDE_DIRS ${PROJECT_SOURCE_DIR}/include
                               EXTERNAL_INCLUDE_DIRS ${GSL_INCLUDE_DIRS}
