--- a/src/libraries/iDyn/CMakeLists.txt
+++ b/src/libraries/iDyn/CMakeLists.txt
@@ -16,16 +16,13 @@ set(folder_header include/iCub/iDyn/iDyn.h
                   include/iCub/iDyn/iDynTransform.h
                   include/iCub/iDyn/iDynContact.h)
 
-source_group("Source Files" FILES ${folder_source})
-source_group("Header Files" FILES ${folder_header})
-
-include_directories(${PROJECT_SOURCE_DIR}/include
-                    ${iKin_INCLUDE_DIRS}
-                    ${skinDynLib_INCLUDE_DIRS})
-
 # import math symbols from standard cmath
 add_definitions(-D_USE_MATH_DEFINES)
 add_library(${PROJECT_NAME} ${folder_source} ${folder_header})
+
+target_include_directories(${PROJECT_NAME} PUBLIC "$<BUILD_INTERFACE:${PROJECT_SOURCE_DIR}/include>"
+                                                  "$<INSTALL_INTERFACE:$<INSTALL_PREFIX>/${CMAKE_INSTALL_INCLUDEDIR}>")
+
 target_link_libraries(${PROJECT_NAME} iKin
                                       skinDynLib
                                       ${YARP_LIBRARIES})
