--- a/src/modules/gravityCompensator/CMakeLists.txt
+++ b/src/modules/gravityCompensator/CMakeLists.txt
@@ -2,18 +2,10 @@
 # Author: Matteo Fumagalli
 # CopyPolicy: Released under the terms of the GNU GPL v2.0.
 
-SET(PROJECTNAME gravityCompensator)
+project(gravityCompensator)
+set(folder_source main.cpp gravityThread.cpp)
+set(folder_header gravityThread.h)
 
-PROJECT(${PROJECTNAME})
-SET(folder_source main.cpp gravityThread.cpp)
-SET(folder_header gravityThread.h)
-
-SOURCE_GROUP("Source Files" FILES ${folder_source})
-SOURCE_GROUP("Header Files" FILES ${folder_header})
-
-INCLUDE_DIRECTORIES(${skinDynLib_INCLUDE_DIRS}
-                    ${iDyn_INCLUDE_DIRS})
-
-ADD_EXECUTABLE(${PROJECTNAME} ${folder_source} ${folder_header})
-TARGET_LINK_LIBRARIES(${PROJECTNAME} skinDynLib iDyn ${YARP_LIBRARIES})
-INSTALL(TARGETS ${PROJECTNAME} DESTINATION bin)
+add_executable(${PROJECT_NAME} ${folder_source} ${folder_header})
+target_link_libraries(${PROJECT_NAME} skinDynLib iDyn ${YARP_LIBRARIES})
+install(TARGETS ${PROJECT_NAME} DESTINATION bin)
