--- a/src/tools/iCubGui/src/CMakeLists.txt
+++ b/src/tools/iCubGui/src/CMakeLists.txt
@@ -53,8 +53,7 @@ source_group("Generated Files" FILES ${iCubGui_QRC_GEN_SRCS}
                                      ${iCubGui_UI_GEN_SRCS})
 
 
-include_directories(${skinDynLib_INCLUDE_DIRS}
-                    ${GLUT_INCLUDE_DIRS}
+include_directories(${GLUT_INCLUDE_DIRS}
                     ${OpenGL_INCLUDE_DIRS}
                     ${Qt5_INCLUDE_DIRS})
 
