--- a/src/tools/skinManagerGui-gtk/CMakeLists.txt
+++ b/src/tools/skinManagerGui-gtk/CMakeLists.txt
@@ -14,8 +14,7 @@ add_definitions(${GTK2_DEFINITIONS})
 
 include_directories(${PROJECT_SOURCE_DIR}/include
                     ${ICUB_INCLUDE_DIRS}
-                    ${GTK2_INCLUDE_DIRS}
-                    ${skinDynLib_INCLUDE_DIRS})
+                    ${GTK2_INCLUDE_DIRS})
 
 # libsigc++ 2.5.1 or later requires c++11. This is automatically
 # enabled with CMake 3.1 or later (using FindGTK2.cmake from CMake
