IplImage / Mat cleanup

--- a/src/modules/actionsRenderingEngine/CMakeLists.txt
+++ b/src/modules/actionsRenderingEngine/CMakeLists.txt
@@ -5,6 +5,7 @@
 
 project(actionsRenderingEngine)
 
+find_package(YARP COMPONENTS OS sig dev math cv)
 find_package(IPOPT REQUIRED)
 
 set(folder_source src/main.cpp
