--- a/src/modules/dualCamCalib/CMakeLists.txt
+++ b/src/modules/dualCamCalib/CMakeLists.txt
@@ -2,30 +2,26 @@
 # Author: Marco Randazzo <marco.randazzo@iit.it>
 # CopyPolicy: Released under the terms of the GNU GPL v2.0.
 
-SET(PROJECTNAME dualCamCalib)
+project(dualCamCalib)
 
-PROJECT(${PROJECTNAME})
+find_package(YARP COMPONENTS OS sig cv)
 
-SET(folder_source src/main.cpp
+set(folder_source src/main.cpp
                   src/spherical_projection.cpp
                   src/DualCamCalibModule.cpp
                   src/CalibToolFactory.cpp
                   src/PinholeCalibTool.cpp
                   src/SphericalCalibTool.cpp)
 
-SET(folder_header include/iCub/spherical_projection.h
+set(folder_header include/iCub/spherical_projection.h
                   include/iCub/DualCamCalibModule.h
                   include/iCub/CalibToolFactory.h
                   include/iCub/ICalibTool.h
                   include/iCub/PinholeCalibTool.h
                   include/iCub/SphericalCalibTool.h)
 
-SOURCE_GROUP("Source Files" FILES ${folder_source})
-SOURCE_GROUP("Header Files" FILES ${folder_header})
-
-INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/include)
-
-ADD_EXECUTABLE(${PROJECTNAME} ${folder_source} ${folder_header})
-TARGET_LINK_LIBRARIES(${PROJECTNAME} ${OpenCV_LIBRARIES} ${YARP_LIBRARIES})
-INSTALL(TARGETS ${PROJECTNAME} DESTINATION bin)
+include_directories(${PROJECT_SOURCE_DIR}/include)
+add_executable(${PROJECT_NAME} ${folder_source} ${folder_header})
+target_link_libraries(${PROJECT_NAME} ${OpenCV_LIBRARIES} ${YARP_LIBRARIES})
+install(TARGETS ${PROJECT_NAME} DESTINATION bin)
 
