--- a/src/tools/skinManagerGui-gtk/CMakeLists.txt
+++ b/src/tools/skinManagerGui-gtk/CMakeLists.txt
@@ -10,8 +10,6 @@ file(GLOB folder_header include/iCub/skinManagerGui/*.h)
 source_group("Source Files" FILES ${folder_source})
 source_group("Header Files" FILES ${folder_header})
 
-add_definitions(${GTK2_DEFINITIONS})
-
 include_directories(${PROJECT_SOURCE_DIR}/include
                     ${ICUB_INCLUDE_DIRS}
                     ${GTK2_INCLUDE_DIRS})
@@ -22,13 +20,14 @@ include_directories(${PROJECT_SOURCE_DIR}/include
 if(NOT ${CMAKE_MINIMUM_REQUIRED_VERSION} VERSION_LESS 3.1)
   message(AUTHOR_WARNING "CMAKE_MINIMUM_REQUIRED_VERSION is now ${CMAKE_MINIMUM_REQUIRED_VERSION}. This check can be removed.")
 endif()
+
+add_executable(${PROJECTNAME} ${folder_source} ${folder_header})
+target_compile_definitions(${PROJECTNAME} PRIVATE ${GTK2_DEFINITIONS})
 if(CMAKE_VERSION VERSION_LESS 3.1)
   if(NOT ${GTK2_SIGC++_VERSION_MAJOR}.${GTK2_SIGC++_VERSION_MINOR}.${GTK2_SIGC++_VERSION_MICRO} VERSION_LESS 2.5.1)
-    add_definitions(${CXX11_FLAGS})
+    target_compile_definitions(${PROJECTNAME} PRIVATE ${CXX11_FLAGS})
   endif()
 endif()
-
-add_executable(${PROJECTNAME}  ${folder_source} ${folder_header})
 
 target_link_libraries(${PROJECTNAME} ${YARP_LIBRARIES}
                                      ${GTK2_LIBRARIES}
