--- a/src/tools/stereoCalib/CMakeLists.txt
+++ b/src/tools/stereoCalib/CMakeLists.txt
@@ -9,13 +9,11 @@ find_package(YARP COMPONENTS OS sig dev math cv)
 file(GLOB source src/*.cpp)
 file(GLOB header include/*.h)
 
-if(OpenCV_VERSION_MAJOR GREATER 2)
-  add_definitions(-DOPENCV_GREATER_2)
-endif()
-
 include_directories(${PROJECT_SOURCE_DIR}/include)
-
 add_executable(${PROJECT_NAME} ${source} ${header})
+if(OpenCV_VERSION_MAJOR GREATER 2)
+  target_compile_definitions(${PROJECT_NAME} PRIVATE OPENCV_GREATER_2)
+endif()
 target_link_libraries(${PROJECT_NAME} ${YARP_LIBRARIES} ${OpenCV_LIBRARIES} iKin)
 install(TARGETS ${PROJECT_NAME} DESTINATION bin)
 
